--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="main.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Julius+Sans+One&display=swap" rel="stylesheet">
+	<title>Freedom</title>
 </head>
 <body>
-<h1>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</h1>
-	<h2>Jean-Jacques Rousseau</h2>
+	<div class="Header">
+    <h1>"The freedom of mankind does not lie in the fact that we can do what we want, but that we do not have to do that which we do not want."</h1>
+    <h2><small>- Jean-Jacob Rousseau</small></h2>
+	</div>
 </body>
 </html>
